[package]
name = "ecdhhelp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.126"
serde_derive = "1.0.0"
hex = "0.4.3"
secp256k1 = {version = "0.22.0", features = ["rand", "bitcoin_hashes", "global-context", "rand-std"]}
bitcoin = {version = "0.28.1", features = ["rand", "base64"]}
bip39 = "1.0.1"
